--- a/src/index.html
+++ b/src/index.html
@@ -67,11 +67,11 @@
           <div class="about__photo">
             <img class="about__img" src="img/about/photo1.jpg" alt="My photo">
           </div>
-          <div class="about__descr">
-            <h2 class="title title_left">About Me</h2>
-            <h4 class="subtitle subtitle_left subtitle_m16">Hi, Im Here To Help Your Next Project</h4>
+          <div class="about__desc">
+            <h2 class="about__title">About Me</h2>
+            <h4 class="about__subtitle">Hi, Im Here To Help Your Next Project</h4>
             <p class="about__text">In recent years, I have worked in the field of educational services. By the nature of my activity, I had to deal with work in a variety of programs, and I became interested in the process of their creation. Friends suggested taking courses in C++. I quickly got hooked and after a while I switched to learning how to create web pages. The very idea that you can design a web page and manage its elements seemed interesting to me, so I came to learn the JavaScript language. With my background in C++, learning JavaScript came relatively quickly to me. Now I am improving my professional competencies by taking a course to get more in-depth knowledge of JavaScript and learning the React library</p>
-            <a class="btn btn__link" href="https://drive.google.com/file/d/1hs5urKN3awTvMEraHzFsQFVmrrH6wScB/view?usp=sharing" target="_blank">My resume</a>
+            <a class="about__btn-link" href="https://drive.google.com/file/d/1hs5urKN3awTvMEraHzFsQFVmrrH6wScB/view?usp=sharing" target="_blank">My resume</a>
           </div>
         </div>
       </div>
@@ -79,8 +79,8 @@
 
     <section class="experience" id="experience">
       <div class="container">
-        <h2 class="title title_center">My Experience</h2>
-        <h3 class="subtitle subtitle_center">My personal journey</h3>
+        <h2 class="experience__title">My Experience</h2>
+        <h3 class="experience__subtitle">My personal journey</h3>
 
         <div class="experience__wrapper">
           <div class="experience__tabs">
@@ -101,24 +101,24 @@
           <div class="experience__sections">
             <div class="experience__content">
               <div class="experience__item experience__item_item1">
-                <h4 class="experience__title">Диплом с квалификацией техник-строитель</h4>
-                <h5 class="experience__subtitle">Мозырский государственный политехнический колледж | Mozyr</h5>
+                <h4 class="experience__paragraph">Диплом с квалификацией техник-строитель</h4>
+                <h5 class="experience__info">Мозырский государственный политехнический колледж | Mozyr</h5>
                 <div class="experience__calendar">
                   <i class="fa-solid fa-calendar-days"></i>
                   <span class="experience__text">September 2008 – June 2012</span>
                 </div>
               </div>
               <div class="experience__item experience__item_item2">
-                <h4 class="experience__title">Диплом с квалификацией педагог-инженер</h4>
-                <h5 class="experience__subtitle">Мозырский государственный педагогический университет имени И.П. Шамякина | Mozyr</h5>
+                <h4 class="experience__paragraph">Диплом с квалификацией педагог-инженер</h4>
+                <h5 class="experience__info">Мозырский государственный педагогический университет имени И.П. Шамякина | Mozyr</h5>
                 <div class="experience__calendar">
                   <i class="fa-solid fa-calendar-days"></i>
                   <span class="experience__text">September 2012 – June 2017</span>
                 </div>
               </div>
               <div class="experience__item experience__item_item3">
-                <h4 class="experience__title">Диплом магистра техники и технологии</h4>
-                <h5 class="experience__subtitle">Белорусский государственный университет информатики и радиоэлектроники | Minsk</h5>
+                <h4 class="experience__paragraph">Диплом магистра техники и технологии</h4>
+                <h5 class="experience__info">Белорусский государственный университет информатики и радиоэлектроники | Minsk</h5>
                 <div class="experience__calendar">
                   <i class="fa-solid fa-calendar-days"></i>
                   <span class="experience__text">September 2018 - June 2020</span>
@@ -127,32 +127,32 @@
             </div>
             <div class="experience__content">
               <div class="experience__item experience__item_item1">
-                <h4 class="experience__title">Web application development with JavaScript</h4>
-                <h5 class="experience__subtitle">IT-Academy | Minsk</h5>
+                <h4 class="experience__paragraph">Web application development with JavaScript</h4>
+                <h5 class="experience__info">IT-Academy | Minsk</h5>
                 <div class="experience__calendar">
                   <i class="fa-solid fa-calendar-days"></i>
                   <span class="experience__text">January 2022 - April 2022</span>
                 </div>
               </div>
               <div class="experience__item experience__item_item2">
-                <h4 class="experience__title">Web-разработчик 2022</h4>
-                <h5 class="experience__subtitle">Udemy | Дистанционно</h5>
+                <h4 class="experience__paragraph">Web-разработчик 2022</h4>
+                <h5 class="experience__info">Udemy | Дистанционно</h5>
                 <div class="experience__calendar">
                   <i class="fa-solid fa-calendar-days"></i>
                   <span class="experience__text">May 2022 - July 2022</span>
                 </div>
               </div>
               <div class="experience__item experience__item_item3">
-                <h4 class="experience__title">Занятия по английскому языку с репетитором</h4>
-                <h5 class="experience__subtitle">Дистанционно</h5>
+                <h4 class="experience__paragraph">Занятия по английскому языку с репетитором</h4>
+                <h5 class="experience__info">Дистанционно</h5>
                 <div class="experience__calendar">
                   <i class="fa-solid fa-calendar-days"></i>
                   <span class="experience__text">August 2021 - Present tense</span>
                 </div>
               </div>
               <div class="experience__item experience__item_item4">
-                <h4 class="experience__title">Курс по JavaScript + React</h4>
-                <h5 class="experience__subtitle">Udemy | Дистанционно</h5>
+                <h4 class="experience__paragraph">Курс по JavaScript + React</h4>
+                <h5 class="experience__info">Udemy | Дистанционно</h5>
                 <div class="experience__calendar">
                   <i class="fa-solid fa-calendar-days"></i>
                   <span class="experience__text">August 2022 - Present tense</span>
@@ -161,24 +161,24 @@
             </div>
             <div class="experience__content">
               <div class="experience__item experience__item_item1">
-                <h4 class="experience__title">Монтажник технологического оборудования и связанных с ним конструкций</h4>
-                <h5 class="experience__subtitle">ПУ “Нефтеспецстрой” РУП ПО “Белоруснефть” | Rechitsa</h5>
+                <h4 class="experience__paragraph">Монтажник технологического оборудования и связанных с ним конструкций</h4>
+                <h5 class="experience__info">ПУ “Нефтеспецстрой” РУП ПО “Белоруснефть” | Rechitsa</h5>
                 <div class="experience__calendar">
                   <i class="fa-solid fa-calendar-days"></i>
                   <span class="experience__text">October 2012 – February 2019</span>
                 </div>
               </div>
               <div class="experience__item experience__item_item2">
-                <h4 class="experience__title">Методист отдела повышения квалификации руководящих работников и специалистов</h4>
-                <h5 class="experience__subtitle">УПК РУП ПО “Белоруснефть” | Rechitsa</h5>
+                <h4 class="experience__paragraph">Методист отдела повышения квалификации руководящих работников и специалистов</h4>
+                <h5 class="experience__info">УПК РУП ПО “Белоруснефть” | Rechitsa</h5>
                 <div class="experience__calendar">
                   <i class="fa-solid fa-calendar-days"></i>
                   <span class="experience__text">February 2019 – July 2021</span>
                 </div>
               </div>
               <div class="experience__item experience__item_item3">
-                <h4 class="experience__title">Frontend developer</h4>
-                <h5 class="experience__subtitle">IT-Academy | Minsk</h5>
+                <h4 class="experience__paragraph">Frontend developer</h4>
+                <h5 class="experience__info">IT-Academy | Minsk</h5>
                 <div class="experience__calendar">
                   <i class="fa-solid fa-calendar-days"></i>
                   <span class="experience__text">March 2022 – April 2022</span>
@@ -509,6 +509,6 @@
 
   <script src="https://kit.fontawesome.com/228ebd4055.js" crossorigin="anonymous"></script>
   <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
-  <script src="js/script.js"></script>
+  <script type="module" src="js/script.js"></script>
 </body>
 </html>
